ndb - bug#16341   create tablespace/logfile group should "back out changes"